--- a/templates/Sale/home.html
+++ b/templates/Sale/home.html
@@ -1,33 +1,79 @@
 {% extends 'base.html' %}
+{% load static %}
 {% load crispy_forms_tags %}
-{% block title %}home
+
+{% block scripts %}
+    <script src="{% static 'Sale/home.js' %}" defer></script>
+{% endblock scripts %}
+
+{% block title %}
+    home
 {% endblock title %}
 
 {% block content %}
-<hr>
-<form action="" method="POST">
-    {% csrf_token %}
-    {{form|crispy}}
-    <button type="submit"  class="btn btn-primary mt-3">Submit</button>
-</form>
-<br/>
+  
+<!-- Modal -->
+<div class="modal fade" id="reportModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+    <div class="modal-dialog">
+      <div class="modal-content">
+        <div class="modal-header">
+          <h5 class="modal-title" id="exampleModalLabel">Guardar Reporte</h5>
+          <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+        </div>
+        
+        <div class="modal-body" id='modal-body'>
+            <div id="alert-box"></div>
+            <form id="report-form" autocomplete="off">
+            {% csrf_token %}
+            {{report_form|crispy}}
+            </form>
+        </div>
+        <div class="modal-footer">
+          <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cerrar</button>
+          <button type="button" class="btn btn-primary">Guardar</button>
+        </div>
+      </div>
+    </div>
+  </div>
+  <!-- Fin Modal -->
+    <hr>
+    <!-- Form para filtro de fechas -->
+    <form action="" method="POST">
+        {% csrf_token %}
+        {{search_form|crispy}}
+        <button type="submit" class="btn btn-primary mt-2">Enviar</button>
+    </form>
+    <br/>
 
-{% if sales_df %}
-    <h2>Ventas hechas:</h1>
-    <br/>
-    {{sales_df|safe}}
-    <br/>
-    <h2>Productos puestos a la venta:</h2>
-    {{positions_df|safe}}
-    <br/>
-    <h2>Tablas fusionadas/mergeadas</h2>
-    {{merged_df|safe}}
-    <br/>
-    <h2>Tablas fusionadas/mergeadas agrupadas por transaction_id</h2>
-    {{merged_df_group|safe}}
-    <br/>
-    <br/>
-    <h2>Charts</h2>
-    <img src="data:image/png;base64, {{chart|safe}}">
-{% endif %}
+    {% if no_data %}
+    <div class="alert alert-warning" role="alert">
+        {{no_data}}
+      </div>
+    {% endif %}
+    <!-- Boton modal reporte -->
+    <button type="button" class="btn btn-primary not-visible" id="report-btn" data-bs-toggle="modal" data-bs-target="#reportModal">
+        Guardar Reporte
+      </button>
+
+      <!-- Boton reporte -->
+    <hr/>
+    {% if sales_df %}
+        <h2>Top Ventas hechas por precio total:</h1>
+        {{sales_df|safe}}
+        <br/>
+        <h2>Charts</h2>
+        <img src="data:image/png;base64, {{chart|safe}}" id='report-img'>
+        <br/>
+        <br/>
+        <h2>Productos puestos a la venta:</h2>
+        {{positions_df|safe}}
+        <br/>
+        <h2>Tablas fusionadas/mergeadas</h2>
+        {{merged_df|safe}}
+        <br/>
+        <h2>Tablas fusionadas/mergeadas agrupadas por transaction_id</h2>
+        {{merged_df_group|safe}}
+        <br/>
+    {% endif %}
+       
 {% endblock content %}
