--- a/templates/Sale/home.html
+++ b/templates/Sale/home.html
@@ -26,11 +26,12 @@
             <form id="report-form" autocomplete="off">
             {% csrf_token %}
             {{report_form|crispy}}
-            </form>
+            
         </div>
         <div class="modal-footer">
           <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cerrar</button>
-          <button type="button" class="btn btn-primary">Guardar</button>
+          <button type="submit" class="btn btn-primary">Guardar</button>
+        </form>
         </div>
       </div>
     </div>
