--- a/static/style.css
+++ b/static/style.css
@@ -1,3 +1,20 @@
 .not-visible {
     display: none;
 }
+
+.dz{
+    border-style: dashed;
+    border-radius: 5px;
+    border-color: rgb(82, 123, 236);
+    transition: .5s;
+}
+
+.dz:hover{
+    background-color: #f5f5f5;
+}
+
+.avatar-big{
+    height: 200px;
+    width: 200px;
+    border-radius: 50%;
+}
