--- a/templates/Report/home.html
+++ b/templates/Report/home.html
@@ -15,7 +15,7 @@ Report List
       <h5 class="card-title">{{obj.name}}</h5>
       <p class="card-text">{{obj.remarks|truncatewords:2}}</p>
       <a href="{{obj.get_absolute_url}}" class="btn btn-primary">Mas...</a>
-      <a href="{{obj.get_absolute_url}}" class="btn btn-secondary">Imprimir a PDF</a>
+      <a href="{% url 'Report:pdf' obj.pk %}" class="btn btn-secondary">Imprimir a PDF</a>
     </div>
   </div>
     <br/>
